# Bagiroid

./: .gitignore  CMakeLists.txt  README.md
plugins/example/: example_plugin.cpp
src/: ball.cpp  ball.h  brick.cpp  brick.h  draw.h  game.cpp  game.h  level_generator.cpp  level_generator.h  main.cpp  object.h  paddle.cpp  paddle.h  physics.cpp  physics.h  plugin_api.h  powerup.cpp  powerup.h  scene.cpp  scene.h  ui.cpp  ui.h
src/core/: game.cpp  game.h  level_generator.cpp  level_generator.h  player.h  scene.cpp  scene.h  ui.cpp  ui.h
src/game_objects/: ball.cpp  ball.h  brick.cpp  brick.h  object.h  paddle.cpp  paddle.h  powerup.cpp  powerup.h
src/plugin_api/: plugin_api.h  plugin_loader.cpp  plugin_loader.h
src/utility/: draw.cpp  draw.h  physics.h
